# CesiumC

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.bat  vcpkg-configuration.json  vcpkg.json
.github/workflows/: build.yml
example/: example.c
include/: cesium-native-api.h
include/cesium/: cesium_common.h  cesium_geospatial.h  cesium_gltf.h  cesium_ion.h  cesium_raster_overlays.h  cesium_tileset.h
src/: cesium_asset_accessor.cpp  cesium_async.cpp  cesium_credit_system.cpp  cesium_errors.cpp  cesium_errors_internal.h  cesium_geospatial.cpp  cesium_gltf.cpp  cesium_internal.h  cesium_ion.cpp  cesium_raster_overlays.cpp  cesium_renderer_resources.cpp  cesium_renderer_resources.h  cesium_tile.cpp  cesium_tileset.cpp  cesium_tileset_options.cpp  cesium_view_state.cpp  cesium_wrappers.h
tests/: test_cesium_native_c.cpp
triplets/: arm64-osx.cmake  arm64-windows.cmake  x64-windows.cmake
